--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,31 @@ bind | split-window -h
 unbind '"'
 unbind %
 
+# Make shift+arrows, ctrl+arrows etc work in Vim.
+set -g xterm-keys on
+
+# Fast escape key
+set -s escape-time 0
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
 # Proper colours
 set -g default-terminal "screen-256color"
+
+# Reload tmux
+unbind r
+bind r source-file ~/.tmux.comf\; display "Config reloaded"
+
+# Don't prompt to kill panes/windows.
+bind-key x kill-pane
+bind-key & kill-window
+
+# Status bar styling and content.
+set -g status-bg black
+set -g status-fg white
+set -g status-left '#S '
+
+# Highlight the active window in the status bar.
+set-window-option -g window-status-current-bg yellow
+set-window-option -g window-status-current-fg black
