--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set -g default-terminal "screen-256color"
 
 # Reload tmux
 unbind r
-bind r source-file ~/.tmux.comf\; display "Config reloaded"
+bind r source-file ~/.tmux.conf\; display "Config reloaded"
 
 # Don't prompt to kill panes/windows.
 bind-key x kill-pane
