when splitting window, open in current directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,10 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # Split screen on - and |
-bind - split-window -v
-bind | split-window -h
 unbind '"'
 unbind %
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 
 # Make shift+arrows, ctrl+arrows etc work in Vim.
 set -g xterm-keys on
