--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,10 +33,6 @@ bind r source-file ~/.tmux.conf\; display "Config reloaded"
 bind-key x kill-pane
 bind-key & kill-window
 
-# Highlight the active window in the status bar.
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-fg black
-
 #
 # Visuals
 #
@@ -44,10 +40,9 @@ set-window-option -g window-status-current-fg black
 # Proper colours
 set -g default-terminal "screen-256color"
 
-# Status bar styling and content.
-set -g status-bg black
-set -g status-fg white
-set -g status-left '#S '
+# Highlight the active window in the status bar.
+set-window-option -g window-status-current-bg colour159
+set-window-option -g window-status-current-fg black
 
 # Quiet the notifications
 set -g visual-activity off
@@ -57,12 +52,12 @@ setw -g monitor-activity off
 set -g bell-action none
 
 # Modes (?)
-setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+# setw -g clock-mode-colour colour5
+# setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
 # Panes
-set -g pane-border-style 'fg=colour19 bg=colour0'
-set -g pane-active-border-style 'bg=colour1 fg=colour11'
+set -g pane-border-style 'fg=colour159 bg=colour0'
+set -g pane-active-border-style 'fg=colour159 bg=colour31'
 
 # Status bar
 set -g status-position bottom
