move panes and resize panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,18 @@ bind r source-file ~/.tmux.conf\; display "Config reloaded"
 bind-key x kill-pane
 bind-key & kill-window
 
+# Pane movement
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Pane resizing
+bind -r Left  resize-pane -L 2
+bind -r Down  resize-pane -D 2
+bind -r Up    resize-pane -U 2
+bind -r Right resize-pane -R 2
+
 #
 # Visuals
 #
@@ -69,3 +81,4 @@ set -g status-right-length 50
 set -g status-left-length 100
 # This might ramp up the battery consumption on laptops, mute if necessary
 set -g status-interval 1
+
