add plugins and spotify support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,15 @@ bind -r Up    resize-pane -U 2
 bind -r Right resize-pane -R 2
 
 #
+# Plugins
+#
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'pwittchen/tmux-plugin-spotify'
+
+#
 # Visuals
 #
 
@@ -75,10 +84,21 @@ set -g pane-active-border-style 'fg=colour159 bg=colour31'
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour234 fg=colour69'
-set -g status-left '#[fg=colour234,bg=colour246,bold]#{pane_current_path}#[bg=colour234] %t'
-set -g status-right '#[fg=colour234,bg=colour246,bold] %A %d/%m/%Y #[fg=colour234,bg=colour246,bold] %T '
-set -g status-right-length 50
+
+set -g status-left '\
+#[fg=colour234,bg=colour246,bold]#{pane_current_path} \
+#[bg=colour234] %t'
+
+set -g status-right '\
+#{spotify_artist} - #{spotify_song} \
+#{cpu_fg_color} CPU: #{cpu_percentage} \
+#[fg=colour234,bg=colour246,bold] %A %d/%m/%Y \
+#[fg=colour234,bg=colour246,bold] %T '
+
 set -g status-left-length 100
+set -g status-right-length 150
 # This might ramp up the battery consumption on laptops, mute if necessary
 set -g status-interval 1
-
+ 
+# Source TPM
+run '~/.tmux/plugins/tpm/tpm'
