--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+#
+# Functionality
+#
+
 # Remap leader to Ctrl+A
 unbind C-b
 set-option -g prefix C-a
@@ -9,6 +13,9 @@ unbind %
 bind - split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
+# Set keybinding to one and only Vim
+setw -g mode-keys vi
+
 # Make shift+arrows, ctrl+arrows etc work in Vim.
 set -g xterm-keys on
 
@@ -18,9 +25,6 @@ set -s escape-time 0
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
-# Proper colours
-set -g default-terminal "screen-256color"
-
 # Reload tmux
 unbind r
 bind r source-file ~/.tmux.conf\; display "Config reloaded"
@@ -29,11 +33,44 @@ bind r source-file ~/.tmux.conf\; display "Config reloaded"
 bind-key x kill-pane
 bind-key & kill-window
 
+# Highlight the active window in the status bar.
+set-window-option -g window-status-current-bg yellow
+set-window-option -g window-status-current-fg black
+
+#
+# Visuals
+#
+
+# Proper colours
+set -g default-terminal "screen-256color"
+
 # Status bar styling and content.
 set -g status-bg black
 set -g status-fg white
 set -g status-left '#S '
 
-# Highlight the active window in the status bar.
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-fg black
+# Quiet the notifications
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# Modes (?)
+setw -g clock-mode-colour colour5
+setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+# Panes
+set -g pane-border-style 'fg=colour19 bg=colour0'
+set -g pane-active-border-style 'bg=colour1 fg=colour11'
+
+# Status bar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour234 fg=colour69'
+set -g status-left '#[fg=colour234,bg=colour246,bold]#{pane_current_path}#[bg=colour234] %t'
+set -g status-right '#[fg=colour234,bg=colour246,bold] %A %d/%m/%Y #[fg=colour234,bg=colour246,bold] %T '
+set -g status-right-length 50
+set -g status-left-length 100
+# This might ramp up the battery consumption on laptops, mute if necessary
+set -g status-interval 1
