update .tmux.conf and tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,24 +46,11 @@ bind -r Up    resize-pane -U 2
 bind -r Right resize-pane -R 2
 
 #
-# Plugins
-#
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'pwittchen/tmux-plugin-spotify'
-
-#
 # Visuals
 #
 
 # Proper colours
 set -g default-terminal "screen-256color"
-
-# Highlight the active window in the status bar.
-set-window-option -g window-status-current-bg colour159
-set-window-option -g window-status-current-fg black
 
 # Quiet the notifications
 set -g visual-activity off
@@ -85,20 +72,4 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour234 fg=colour69'
 
-set -g status-left '\
-#[fg=colour234,bg=colour246,bold]#{pane_current_path} \
-#[bg=colour234] %t'
-
-set -g status-right '\
-#{spotify_artist} - #{spotify_song} \
-#{cpu_fg_color} CPU: #{cpu_percentage} \
-#[fg=colour234,bg=colour246,bold] %A %d/%m/%Y \
-#[fg=colour234,bg=colour246,bold] %T '
-
-set -g status-left-length 100
-set -g status-right-length 150
-# This might ramp up the battery consumption on laptops, mute if necessary
-set -g status-interval 1
- 
-# Source TPM
-run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.config/tmux/tmux-onedark-theme/tmux-onedark-theme.tmux
